tools/architecture/validate-source-imports/tests/fixtures/invalid/profile-imports-postgres/src/index.ts
import { db } from "@platform/adapters-postgres";
export const packageName = "@platform/profile-configuration";
